[gd_scene load_steps=7 format=3 uid="uid://h7qy01iupwpw"]

[ext_resource type="Script" uid="uid://2uxebbixewxm" path="res://ui/menu/settings_menu.gd" id="1_g5ctv"]
[ext_resource type="Shader" uid="uid://w2fv1ddnb8ag" path="res://shaders/balatro.gdshader" id="2_aneqr"]
[ext_resource type="Theme" uid="uid://ovugx2tb06c" path="res://ui/theme/secondary_ui_theme.tres" id="3_og1ta"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_og1ta"]
resource_local_to_scene = true
shader = ExtResource("2_aneqr")
shader_parameter/spin_rotation_speed = 2.0
shader_parameter/move_speed = 5.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.874849, 0.666709, 0.689393, 1)
shader_parameter/colour_2 = Color(0.763591, 0.0259512, 2.88785e-07, 1)
shader_parameter/colour_3 = Color(0.00516314, 0.0551381, 0.137087, 1)
shader_parameter/contrast = 10.235
shader_parameter/lighting = -0.185
shader_parameter/spin_amount = 0.4
shader_parameter/pixel_filter = 2000.0
shader_parameter/is_rotating = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aneqr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_og1ta"]

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource("1_g5ctv")

[node name="Modulator" type="CanvasModulate" parent="."]
unique_name_in_owner = true

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_og1ta")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.616362, 0.728754, 0.858695, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="SubTitle" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "TITLE_SETTINGS"
horizontal_alignment = 1

[node name="GameSettings" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/GameSettings"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GameSettingsList" type="VBoxContainer" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList"]
layout_mode = 2
text = "LABEL_GAME_SETTINGS"

[node name="LanguageSetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/LanguageSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "LABEL_LANGUAGE"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/LanguageSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_aneqr")

[node name="Language" type="OptionButton" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/LanguageSetting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../../../../Buttons/DefaultButton")
focus_neighbor_bottom = NodePath("../../CameraZoomSetting/CameraZoom")
flat = true
selected = 0
item_count = 2
popup/item_0/text = "LANGUAGE_EN"
popup/item_0/id = 0
popup/item_1/text = "LANGUAGE_FR"
popup/item_1/id = 1

[node name="CameraZoomSetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/CameraZoomSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTING_CAMERA_ZOOM"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/CameraZoomSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_aneqr")

[node name="CameraZoom" type="HSlider" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/CameraZoomSetting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../LanguageSetting/Language")
focus_neighbor_bottom = NodePath("../../MapOpacitySetting/MapOpacity")
min_value = 0.8
max_value = 2.0
step = 0.1
value = 1.3

[node name="MapOpacitySetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/MapOpacitySetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTING_MAP_OPACITY"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/MapOpacitySetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_aneqr")

[node name="MapOpacity" type="HSlider" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/MapOpacitySetting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../CameraZoomSetting/CameraZoom")
focus_neighbor_bottom = NodePath("../../EnableVibrationsSetting/EnableVibrations")
max_value = 1.0
step = 0.1
value = 1.0

[node name="EnableVibrationsSetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/EnableVibrationsSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTING_GAMEPAD_VIBRATION"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/EnableVibrationsSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_aneqr")

[node name="EnableVibrations" type="CheckBox" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/EnableVibrationsSetting"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../MapOpacitySetting/MapOpacity")
focus_neighbor_bottom = NodePath("../../EnableXpRadiusSetting/EnableXpRadius")
flat = true

[node name="EnableXpRadiusSetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/EnableXpRadiusSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTING_DISPLAY_XP_RADIUS"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/EnableXpRadiusSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_aneqr")

[node name="EnableXpRadius" type="CheckBox" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/EnableXpRadiusSetting"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../EnableVibrationsSetting/EnableVibrations")
focus_neighbor_bottom = NodePath("../../EnableAnnouncementsStickersSetting/EnableAnnouncementStickers")
flat = true

[node name="EnableAnnouncementsStickersSetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/EnableAnnouncementsStickersSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTING_ENABLE_ANNOUNCEMENT_STICKERS"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/EnableAnnouncementsStickersSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_aneqr")

[node name="EnableAnnouncementStickers" type="CheckBox" parent="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/EnableAnnouncementsStickersSetting"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../EnableXpRadiusSetting/EnableXpRadius")
focus_neighbor_bottom = NodePath("../../../../../AudioSettings/Panel/AudioSettingsList/AudioMasterSetting/MasterVolume")
flat = true

[node name="AudioSettings" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="MarginContainer" parent="CenterContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="AudioSettingsList" type="VBoxContainer" parent="CenterContainer/VBoxContainer/AudioSettings/Panel"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList"]
layout_mode = 2
text = "LABEL_AUDIO_SETTINGS"

[node name="AudioMasterSetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioMasterSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTING_AUDIO_MASTER"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioMasterSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_og1ta")

[node name="MasterVolume" type="HSlider" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioMasterSetting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../../../GameSettings/PanelContainer/GameSettingsList/EnableAnnouncementsStickersSetting/EnableAnnouncementStickers")
focus_neighbor_bottom = NodePath("../../AudioFXSetting/SFXVolume")
max_value = 1.0
step = 0.05
value = 0.5

[node name="AudioFXSetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioFXSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTING_AUDIO_FX"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioFXSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_og1ta")

[node name="SFXVolume" type="HSlider" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioFXSetting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../AudioMasterSetting/MasterVolume")
focus_neighbor_bottom = NodePath("../../AudioAnnouncementsSetting/AnnouncementsVolume")
max_value = 1.0
step = 0.05
value = 0.5

[node name="AudioAnnouncementsSetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioAnnouncementsSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTING_AUDIO_ANNOUNCEMENTS"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioAnnouncementsSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_og1ta")

[node name="AnnouncementsVolume" type="HSlider" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioAnnouncementsSetting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../AudioFXSetting/SFXVolume")
focus_neighbor_bottom = NodePath("../../AudioMusicSetting/MusicVolume")
max_value = 1.0
step = 0.05
value = 0.5

[node name="AudioMusicSetting" type="HBoxContainer" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioMusicSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SETTING_AUDIO_MUSIC"

[node name="Panel" type="Panel" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioMusicSetting"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_og1ta")

[node name="MusicVolume" type="HSlider" parent="CenterContainer/VBoxContainer/AudioSettings/Panel/AudioSettingsList/AudioMusicSetting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../AudioAnnouncementsSetting/AnnouncementsVolume")
focus_neighbor_bottom = NodePath("../../../../../Buttons/SaveButton")
max_value = 1.0
step = 0.05
value = 0.5

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_neighbor_top = NodePath("../../AudioSettings/Panel/AudioSettingsList/AudioMusicSetting/MusicVolume")
focus_neighbor_bottom = NodePath("../DefaultButton")
theme_override_font_sizes/font_size = 35
text = "BUTTON_SAVE_SETTINGS"

[node name="DefaultButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../SaveButton")
focus_neighbor_bottom = NodePath("../../GameSettings/PanelContainer/GameSettingsList/LanguageSetting/Language")
theme = ExtResource("3_og1ta")
text = "BUTTON_APPLY_DEFAULT_SETTINGS"

[connection signal="item_selected" from="CenterContainer/VBoxContainer/GameSettings/PanelContainer/GameSettingsList/LanguageSetting/Language" to="." method="_on_language_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/SaveButton" to="." method="_on_save_button_pressed"]
